<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMovie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <ImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="91dp"
        android:layout_height="119dp"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/actor_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="199dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_title"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovieDescription"
        android:layout_width="298dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:text="@string/movie_description"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/tvMovieRelease"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_release"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvMovieName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="208dp"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/image_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvMovieDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieDescription"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>